--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   ],
   "scripts": {
     "bootstrap": "yarn install --frozen-lockfile && yarn --cwd ./packages/component-library/ build && yarn --cwd ./packages/mock-wrapper/ build",
-    "build": "yarn workspace @hackoregon/2018 build",
-    "prebuild": "yarn workspace @hackoregon/component-library build && yarn workspace @hackoregon/mock-wrapper build",
+    "build": "lerna run build",
+    "build-netlify": "yarn workspace @hackoregon/component-library build && yarn workspace @hackoregon/mock-wrapper build && yarn workspace @hackoregon/2018 build",
     "card": "yarn new-card",
     "card:local-data": "yarn new-card:local-data",
     "card:minimal": "yarn new-card:minimal",
