--- a/packages/civic-sandbox/package.json
+++ b/packages/civic-sandbox/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@hackoregon/component-library": "^4.0.0",
+    "@hackoregon/mock-wrapper": "^3.0.0",
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
@@ -50,7 +51,8 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.1.0",
-    "reselect": "^3.0.0"
+    "reselect": "^3.0.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -58,7 +60,6 @@
     "@babel/node": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^3.0.0",
-    "@hackoregon/mock-wrapper": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
     "autoprefixer": "^9.4.10",
     "babel-jest": "^24.5.0",
