--- a/packages/2019-disaster-game/package.json
+++ b/packages/2019-disaster-game/package.json
@@ -38,7 +38,7 @@
     "@hackoregon/component-library": "^4.0.0",
     "@hackoregon/dev-server": "^3.0.0",
     "@hackoregon/mock-wrapper": "^3.0.0",
-    "@hackoregon/webpack-common": "^3.0.0",
+    "@hackoregon/webpack-common": "3.0.1-ci.137",
     "@sentry/browser": "^5.7.1",
     "axios": "^0.18.0",
     "chalk": "^1.1.3",
