--- a/packages/ui-maps/package.json
+++ b/packages/ui-maps/package.json
@@ -76,6 +76,8 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.15",
+    "@hackoregon/ui-themes": "^0.0.2",
+    "@hackoregon/ui-core": "^0.0.2",
     "@hackoregon/component-library": "^4.0.0",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.1",
