--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@storybook/addon-knobs": "^5.0.6",
     "@storybook/addon-links": "^5.0.6",
     "@storybook/addon-notes": "^5.0.6",
-    "@storybook/addon-storysource": "5.0.6",
+    "@storybook/addon-storysource": "^5.0.6",
     "@storybook/addon-viewport": "^5.0.11",
     "@storybook/react": "^5.0.6",
     "@storybook/storybook-deployer": "^2.3.0",
