--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -52,7 +52,7 @@
     "@storybook/addon-knobs": "^5.0.6",
     "@storybook/addon-links": "^5.0.6",
     "@storybook/addon-notes": "^5.0.6",
-    "@storybook/addon-storysource": "5.0.6",
+    "@storybook/addon-storysource": "^5.0.6",
     "@storybook/addon-viewport": "^5.0.11",
     "@storybook/react": "^5.0.6",
     "babel-eslint": "^10.0.1",
