--- a/packages/2018-disaster-resilience/package.json
+++ b/packages/2018-disaster-resilience/package.json
@@ -64,6 +64,7 @@
     "@babel/node": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^3.0.0",
+    "@hackoregon/dev-server": "workspace:packages/dev-server",
     "autoprefixer": "^9.4.10",
     "babel-jest": "^24.5.0",
     "chai": "^4.2.0",
