--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -54,10 +54,13 @@
     "@storybook/addon-storysource": "^5.0.6",
     "@storybook/addon-viewport": "^5.0.11",
     "@storybook/react": "^5.0.6",
+    "@storybook/source-loader": "^5.3.19",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^0.22.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.1",
@@ -71,6 +74,7 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^7.12.4",
     "ignore-styles": "^5.0.1",
+    "jsdom": "^14.0.0",
     "mocha": "^6.0.2",
     "mocha-clean": "^1.0.0",
     "rimraf": "^2.6.2",
